[gd_scene load_steps=5 format=3 uid="uid://4pdlq47wirk4"]

[ext_resource type="Script" uid="uid://cy1cpi3pq0v4" path="res://addons/godot-xr-tools/objects/snap_zone.gd" id="1_tyrvf"]
[ext_resource type="Script" uid="uid://b1xro81dfpq5y" path="res://scripts/gramophone_filter_snap_zone.gd" id="1_x7kkn"]
[ext_resource type="PackedScene" uid="uid://da2qgxxwwitl6" path="res://addons/godot-xr-tools/objects/highlight/highlight_ring.tscn" id="2_x7kkn"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hwkqu"]
resource_local_to_scene = true
radius = 0.1

[node name="GramophoneFilterSnapZone" type="Node3D" node_paths=PackedStringArray("snap_zone", "highlight")]
script = ExtResource("1_x7kkn")
snap_zone = NodePath("XRToolsSnapZone")
highlight = NodePath("XRToolsSnapZone/HighlightRing")

[node name="XRToolsSnapZone" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 65540
script = ExtResource("1_tyrvf")
grab_distance = 0.1
snap_require = "GramophoneFilter"

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRToolsSnapZone"]
shape = SubResource("SphereShape3D_hwkqu")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="XRToolsSnapZone"]
unit_size = 3.0
max_db = 1.0
max_distance = 100.0

[node name="HighlightRing" parent="XRToolsSnapZone" instance=ExtResource("2_x7kkn")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)

[connection signal="body_entered" from="XRToolsSnapZone" to="XRToolsSnapZone" method="_on_snap_zone_body_entered"]
[connection signal="body_exited" from="XRToolsSnapZone" to="XRToolsSnapZone" method="_on_snap_zone_body_exited"]
[connection signal="has_picked_up" from="XRToolsSnapZone" to="." method="_on_xr_tools_snap_zone_has_picked_up"]
